feat: implement bill of materials as planned edc offering
